<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>loma_sim</name>
  <version>0.1.0</version>
  <description>
    Simulator for quadrupedal manipulators.
  </description>
  <maintainer email="junli@hit.edu.cn">Jun Li</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>commutils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
